base/src/test/resources/failure/projection/issues2/issue151.aya.txt
In file $FILE:21:38 ->

  19 |   | assoc (a b c : Nat) : Eq (op (op a b) c) (op a (op b c))
  20 | 
  21 | def l-id (M : Monoid) (a : Nat) : Eq (M.add zero a) a => refl
                                             ^---^

Error: Unknown field `add` projected

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
